revisi transaksi
