# hulutani-api/docs/swagger.json
@@ -1199,7 +1199,7 @@
                         "Auth": []
                     }
                 ],
-                "description": "Get All Transaksi",
+                "description": "Get All Transaksi ID User",
                 "consumes": [
                     "application/json"
                 ],
@@ -1209,7 +1209,7 @@
                 "tags": [
                     "Transaksi"
                 ],
-                "summary": "Get All Transaksi",
+                "summary": "Get All Transaksi By ID User",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -1270,6 +1270,46 @@
                         "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/helper.Failure"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/helper.Failure"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/helper.Failure"
+                        }
+                    }
+                }
+            }
+        },
+        "/transaksi/all": {
+            "get": {
+                "security": [
+                    {
+                        "Auth": []
+                    }
+                ],
+                "description": "Get All Transaksi",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Transaksi"
+                ],
+                "summary": "Get All Transaksi",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/helper.Response"
                         }
                     },
                     "401": {
@@ -1629,38 +1669,6 @@
                 }
             }
         },
-        "entity.Produk": {
-            "type": "object",
-            "properties": {
-                "deskripsi": {
-                    "type": "string"
-                },
-                "gambar": {
-                    "type": "string"
-                },
-                "harga": {
-                    "type": "integer"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "id_kategori": {
-                    "type": "integer"
-                },
-                "nama": {
-                    "type": "string"
-                },
-                "promo": {
-                    "type": "string"
-                },
-                "stok": {
-                    "type": "integer"
-                },
-                "takaran": {
-                    "type": "string"
-                }
-            }
-        },
         "entity.ProdukInput": {
             "type": "object",
             "properties": {
@@ -1704,34 +1712,25 @@
         "entity.TransaksiInput": {
             "type": "object",
             "properties": {
+                "bukti_transfer": {
+                    "type": "string"
+                },
                 "harga": {
                     "type": "integer"
                 },
-                "id_pelanggan": {
+                "id_alamat": {
                     "type": "integer"
                 },
                 "id_produk": {
                     "type": "integer"
                 },
-                "kode_transaksi": {
-                    "type": "string"
-                },
                 "metode_pembayaran": {
                     "type": "string"
-                },
-                "produk": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/entity.Produk"
-                    }
                 },
                 "quantity": {
                     "type": "integer"
                 },
                 "status": {
-                    "type": "string"
-                },
-                "tanggal": {
                     "type": "string"
                 }
             }
