# hulutani-api/routes/transaksi.go
@@ -14,7 +14,8 @@ var (
 )
 
 func RouteTransaksi(r *gin.Engine) {
-	r.GET("/transaksi", handler.Middleware(authService), transaksiHandler.ShowAllTransaksi)
+	r.GET("/transaksi/all", adminMiddleware, transaksiHandler.ShowAllTransaksi)
+	r.GET("/transaksi", handler.Middleware(authService), transaksiHandler.ShowAllTransaksiByIdUser)
 	r.GET("/transaksi/:kode_transaksi", handler.Middleware(authService), transaksiHandler.ShowTransaksiByKode)
 	r.POST("/transaksi", handler.Middleware(authService), transaksiHandler.CreateTransaksiHandler)
 	r.POST("/produk-transaksi", handler.Middleware(authService), transaksiHandler.CreateProdukTransaksiHandler)
